# otaku-api

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
